<resources>
    <string name="app_name">Entreumart</string>
    <string name="app_version">Entreumart\nby KWU IKIP Siliwangi</string>
    <string name="icon_app">Icon App</string>
    <string name="welcome">Selamat Datang!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter">Masuk</string>
    <string name="have_account">Sudah punya akun?</string>
    <string name="no_have_account">Belum punya akun?</string>
    <string name="register_account">Daftar Akun</string>
    <string name="register">Daftar</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="user_welcome">Hi, %s!</string>
    <string name="container">Container</string>
    <string name="hint_search">Apa yang kamu cari?</string>
    <string name="dummy_price">Rp. 300.000</string>
    <string name="dummy_product">Pink Sneakers</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home">Home</string>
    <string name="shopping">Belanjaan</string>
    <string name="history">Riwayat</string>
    <string name="dummy_name">Jane Doe</string>
    <string name="profile">Profil</string>
    <string name="my_profile">Profil Saya</string>
    <string name="chat">Pesan</string>
    <string name="wishlist">Wishlist</string>
    <string name="about">About</string>
    <string name="nim">NIM</string>
    <string name="whatsapp_number">Nomor WhatsApp</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="update">Ubah</string>
    <string name="save">Simpan</string>
    <string name="content_desc">Content Description</string>
    <string name="about_us">Tentang Kami</string>
    <string name="ukm_ikip">UKM IKIP</string>
    <string name="desc_about_us">UKM KWU IKIP Siliwangi adalah UKM yang\nbergerak dalam bidang kewirausahaan\ndi IKIP Siliwangi.</string>
    <string name="hello">Hallo!</string>
    <string name="dummy_number">4</string>
    <string name="error_connection">Koneksi bermasalah</string>
    <string name="username">Username</string>
    <string name="logout">Keluar</string>
    <string name="error_upload_image">Update profile gagal</string>
    <string name="cart">Keranjang</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sed tellus scelerisque, convallis augue nec, vehicula eros. Suspendisse eget libero mollis, fringilla ipsum eget, placerat tellus. Aliquam pretium enim ut metus eleifend sodales. Cras libero enim, posuere a accumsan ut, cursus pellentesque lectus. Proin sed ipsum sit amet nisi accumsan iaculis in ut quam. Morbi eget ullamcorper ipsum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tincidunt erat eu tortor posuere auctor. Quisque augue risus, ullamcorper non quam consequat, iaculis sagittis eros.</string>
    <string name="description">Deskripsi</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="total">Total</string>
    <string name="buy">Bayar</string>
    <string name="dummy_initial_number">1</string>
    <string name="initial_price">Rp 0</string>
    <string name="cod">Cash On Delivery (COD)</string>
    <string name="bank_transfer">Transfer Bank</string>
    <string name="payment">Pembayaran</string>
    <string name="total_payment">Total Pembayaran</string>
    <string name="account_number">00091–0161–004320–9 (Anissa Rizki Mulia)</string>
    <string name="dummy_initial_numberx">1x</string>
    <string name="product_count">%sx</string>
    <string name="processed">Diproses</string>
    <string name="payment_method">Metode Pembayaran</string>
    <string name="shopping_details">Detail Belanja</string>
    <string name="status">Status</string>
    <string name="complete_order">Selesaikan Pesanan</string>
    <string name="entreumart">Entreumart</string>
    <string name="sub_entreumart">by KWU IKIP Siliwangi</string>
    <string name="upload_payment_proof">Upload Bukti Pembayaran</string>
    <string name="payment_proof">Bukti Pembayaran</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>