<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.excode.marketplace.ui.market.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <activity
        android:id="@+id/nav_profile"
        android:name="com.excode.marketplace.ui.market.profile.ProfileActivity"
        android:label="@string/profile"
        tools:layout="@layout/activity_profile" />

    <activity
        android:id="@+id/nav_wishlist"
        android:name="com.excode.marketplace.ui.market.wishlist.WishlistActivity"
        android:label="@string/wishlist"
        tools:layout="@layout/activity_wishlist" />

    <activity
        android:id="@+id/nav_chat"
        android:name="com.excode.marketplace.ui.market.chat.ChatActivity"
        android:label="@string/chat"
        tools:layout="@layout/activity_chat" />

    <activity
        android:id="@+id/nav_about"
        android:name="com.excode.marketplace.ui.market.about.AboutActivity"
        android:label="@string/about"
        tools:layout="@layout/activity_about" />
</navigation>